--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,3 +7,11 @@ body{
   font-family: Helvetica, Ariel, sans-serif;
   font-size: $m-size;
 }
+
+button{
+  cursor: pointer;
+}
+
+button:disabled{
+  cursor: default;
+}
