--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -3,3 +3,4 @@
 @import './components/container.scss';
 @import './components/header.scss';
 @import './components/button.scss';
+@import './components/widget.scss';
