--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,8 @@
-@import './base/settings.scss';
-@import './base/base.scss';
-@import './components/container.scss';
-@import './components/header.scss';
-@import './components/button.scss';
-@import './components/widget.scss';
+@import './base/settings';
+@import './base/base';
+@import './components/add-option';
+@import './components/button';
+@import './components/container';
+@import './components/header';
+@import './components/option';
+@import './components/widget';
