--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -6,7 +6,7 @@
   color: white;
   font-size: $l-size;
   font-weight: bold;
-  margin-bottom: $xl-size;
+  margin-bottom: $s-size;
   padding: 2.4rem;
   width: 100%;
 }
@@ -14,6 +14,13 @@
 .big-button:disabled{
   opacity: .5;
 }
+
+@media (min-width: $desktop-breakpoint){
+  .big-button{
+    margin-bottom: $xl-size;
+  }
+}
+
 
 // Button
 .button{
@@ -32,5 +39,3 @@
   color: $off-white;
   padding: 0;
 }
-
-// bem
