--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -1,10 +1,10 @@
 // Colors:
 $off-black: #202232;
 $off-white: #A4BBD6;
-$blue: #414759;
+$grey: #414759;
 $dark-blue: #2C3144;
 $light-blue: #495060;
-$purple: #5682C4;
+$blue: #5682C4;
 
 // Spacing:
 $s-size: 1.2rem;
