--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -1,8 +1,8 @@
 // Big button
 .big-button{
-  background: $purple;
+  background: $blue;
   border: none;
-  border-bottom: .6rem solid darken($purple, 10%);
+  border-bottom: .6rem solid darken($blue, 10%);
   color: white;
   font-size: $l-size;
   font-weight: bold;
@@ -24,9 +24,9 @@
 
 // Button
 .button{
-  background: $purple;
+  background: $blue;
   border: none;
-  border-bottom: .3rem solid darken($purple, 10%);
+  border-bottom: .3rem solid darken($blue, 10%);
   color: white;
   font-weight: 500;
   padding: $s-size;
