--- a/src/styles/components/_widget.scss
+++ b/src/styles/components/_widget.scss
@@ -14,7 +14,7 @@
 
 // Widget header
 .widget-header{
-  background: $blue;
+  background: $grey;
   color: $off-white;
   display: flex;
   justify-content: space-between;
